# hordora

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  flake.nix  install.sh  release.sh
assets/shaders/: dot_grid.glsl
config/: config.toml
config/waybar/: taskbar.jsonc
docs/: CAVEATS.md  DESIGN.md  protocol-plan.md  shaders.md  smithay-api.md  xwayland-plan.md
extras/: README.md  config.toml
extras/scripts/: battery_notify.sh  torture-test.sh
extras/widgets/: common.py  launch.sh  power_menu.py  stats_widget.py
resources/: driftwm.desktop  hordora-session  hordora.desktop
src/: canvas.rs  config.rs  decorations.rs  focus.rs  input.rs  lib.rs  main.rs  render.rs  snap.rs  state.rs  window_ext.rs  winit.rs
src/backend/: mod.rs  udev.rs  winit.rs
src/config/: defaults.rs  mod.rs  parse.rs  toml.rs  types.rs
src/grabs/: mod.rs  move_grab.rs  navigate_grab.rs  pan_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/input/: actions.rs  gestures.rs  mod.rs  pointer.rs
src/protocols/: foreign_toplevel.rs  image_copy_capture.rs  screencopy.rs
src/render/: blur.rs  capture.rs  elements.rs  mod.rs
src/shaders/: corner_clip.glsl
src/state/: animation.rs  fit.rs  mod.rs  (+2 more)
tests/: canvas_navigation_test.rs  canvas_test.rs  canvas_transforms_test.rs  canvas_zoom_test.rs  config_bindings_test.rs  config_parse_test.rs  config_test.rs  config_toml_test.rs  snap_test.rs
widgets/: calendar_widget.py  common.py  launch.sh  main_pane.py  weather.py
